# ProjektyStudia

Analiza_Zanieczyszczenia/: .Rhistory  Kod.R  krk_point_23km.Rdata
Analiza_Zanieczyszczenia/08.01/: 08.01_22.Rdata  Dane_x_09.csv
Analiza_Zanieczyszczenia/09.01/: 09.01.rar  09.01_21.Rdata  Dane_2023-01-09_021.csv  Dane_2023-01-09_09.csv
Analiza_Zanieczyszczenia/10.01/: 10.01.rar  10.01_21.Rdata  Dane_2023-01-10_015.csv  Dane_2023-01-10_021.csv  Dane_2023-01-10_09.csv
ProjektInzynierski/: .Rhistory  README.txt  Shiny.R  gomap.js  styles.css
ProjektInzynierski/Dane/: 01.12.2023_8godz.Rdata  02.01.2024_11godz.Rdata  03.01.2024_12godz.Rdata  04.01.2024_11godz.Rdata  05.01.2024_10godz.Rdata  05.12.2023_7godz.Rdata  06.12.2023_9godz.Rdata  07.12.2023_7godz.Rdata  08.12.2023_8godz.Rdata  09.01.2024_10godz.Rdata  09.12.2023_12godz.Rdata  10.01.2024_9godz.Rdata  10.12.2023_12godz.Rdata  11.01.2024_10godz.Rdata  11.12.2023_8godz.Rdata  12.01.2024_9godz.Rdata  12.12.2023_8godz.Rdata  13.01.2024_19godz.Rdata  13.12.2023_8godz.Rdata  14.01.2024_12godz.Rdata  14.12.2023_7godz.Rdata  15.01.2024_10godz.Rdata  15.11.2023_10godz.Rdata  (+20 more)
Symulator_Fabryki_Pojazdow/: CMakeLists.txt  funkcje_inne.h  funkcje_main.cpp  generator_liczb_losowych.cpp  klasy_pojazdy.h  klasy_zaklady.h  komendy.cpp  konstrukcja.cpp  main.cpp  metody_fabryka.cpp  metody_komis.cpp  metody_lokomocja.cpp  metody_motocykl.cpp  metody_pojazdy.cpp  metody_rower.cpp  metody_samochod.cpp  metody_sklep.cpp  metody_zaklady.cpp  operacje_na_plikach.cpp  opisprojektu.txt  wyswietlacz.cpp  zarzadzanie.cpp
(+8 files in other folders)
